docker-registry/ui/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware

metadata:
  name: https-redirect
  namespace: default

spec:
  redirectScheme:
    scheme: https
    permanent: true
