docker-registry/ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: regui
  labels:
    app: regui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: regui
  template:
    metadata:
      labels:
        app: regui
    spec:
      containers:
      - name: regui
        image: bessenyeicsilla/genuinetools_reg:latest
        command:
        - sh
        - -c
        - reg server --interval 1m -r https://docker-registry.csikoste.com -u $(REGISTRY_USERNAME) -p $(REGISTRY_PASSWORD)
        ports:
        - containerPort: 8080
