docker-registry/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: regui
spec:
  selector:
    apps: regui
  ports:
  - name: http
    port: 80
    targetPort: 8080
